Refer to ChangeLog for detailed per-file info.

caspar version 20091114

- Preliminary manpage csp_helper(1) added, documenting helper scripts
  csp_install, csp_scp_keep_mode and csp_sucp.  (The separate csp_sucp manpage
  is gone.)
- Adjusted caspar.mk so that it's actually possible to hook csp_install
  and csp_scp_keep_mode into caspar.


caspar version 20090926

- Unstable bleeding edge snapshot release.
- Added (not yet documented) new scripts csp_install and csp_scp_keep_mode,
  allowing for more robust installs.
- Add script caspar(1), for generating caspar-style Makefiles, contributed
  by Jeroen Hoppenbrouwers.
- setversion: allow for user override of version of caspar release.
- TODO: updated


caspar version 20090406

- BEWARE! Backwards INcompatible change in user interface!  mk/caspar.mk does
  no longer supply backward compatibility with caspar <= 20060216: Support for
  csp_SUH, csp_SUHS, csp_SUHDIRS and csp_SCPDIR is dropped.  If you use
  old-style Makefiles, you'll have to fix these now:

   for csp_SUHS   now use csp_UHOSTS
   for csp_SUH    now use csp_UHOST
   for csp_SCPDIR now use csp_DIR

  (There is no replacement variable for csp_SUHDIRS; csp_CPDIRS for now is
  still supported.) See the 20060216 NEWS item for more details.  A crude way
  to update your Makefiles would be to run something along the lines of:

   % find . -name Makefile -o -name install.mk | while read f; do
      sed -i 's/csp_SUHS/csp_UHOSTS/g; s/csp_SUH/csp_UHOST/g;
       s/csp_SCPDIR/csp_DIR/g' $f;
     done

  This kinda worked for me.  YMMV.  (Please mail the author if you need help
  converting your Makefiles and you've explicitly used the variable
  csp_SUHDIRS.)

  (No other incompatible change will get introduced during the Debian "squeeze"
  nor during the "squeeze + 1" release cycle: caspar in squeeze + 1 will be
  backwards compatible with this caspar version.  History of incompatible
  changes and Debian GNU/Linux releases:
