@@ -1,8 +1,8 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.4 2009-09-26 01:53:25 joostvb Exp $
+## $Id: Makefile.am,v 1.5 2009-11-14 07:01:52 joostvb Exp $
 ## $Source: /cvsroot/caspar/caspar/caspar/script/Makefile.am,v $
 
-bin_SCRIPTS = caspar csp_install csp_scp_keep_mode csp_sucp
+bin_SCRIPTS = casparize csp_install csp_scp_keep_mode csp_sucp
 
 EXTRA_DIST = $(bin_SCRIPTS)
 
