@@ -1,5 +1,11 @@
 Refer to ChangeLog for detailed per-file info.
 
+caspar version 200911DD
+
+- Renamed caspar(1) to casparize(1).
+- FIXME
+
+
 caspar version 20091114
 
 - Preliminary manpage csp_helper(1) added, documenting helper scripts
@@ -285,4 +291,4 @@ caspar version 20030803
 
 - See doc/ChangeLog.2002 for news about caspar 20030803 and earlier
 
-# $Id: NEWS,v 1.49 2009-11-14 05:56:44 joostvb Exp $
+# $Id: NEWS,v 1.50 2009-11-14 07:01:46 joostvb Exp $
